@startuml stateMachine
scale 500 width
[*] --> PRE_FIRE
PRE_FIRE --> FILL : GOTO_FILL \n
PRE_FIRE --> TEST : GOTO_TEST
FILL --> IGNITION : \n GOTO_IGNITION \n WARNING IF VALVE STATE DIFFERENT
FILL --> ABORT : GOTO_ABORT
FILL --> PRE_FIRE : GOTO_PRE_FIRE \n WARNING IF VALVE STATE DIFFERENT
IGNITION --> FIRE : GOTO_FIRE \n IGNITORS LIVE \n 3.5 SECONDS
IGNITION --> ABORT : GOTO_ABORT
IGNITION --> FILL : GOTO_FILL
FIRE --> ABORT : GOTO_ABORT
FIRE --> POST_FIRE : FIRE COMPLETE or \n SOFT_ABORT
POST_FIRE --> FILL : GOTO_FILL
POST_FIRE --> ABORT : GOTO_ABORT
ABORT --> PRE_FIRE : GOTO_PRE_FIRE
TEST --> PRE_FIRE : GOTO_PRE_FIRE \n\n
 
state PRE_FIRE {
  state Prefire_Valve_State: PBV1: CLOSED
  state Prefire_Valve_State: PBV2: OPEN
  state Prefire_Valve_State: PBV3: CLOSED
  state Prefire_Valve_State: PBV4: OPEN
  state Prefire_Valve_State: PBV5: OPEN
  state Prefire_Valve_State: PBV6: CLOSED
  state Prefire_Valve_State: PBV7: CLOSED
  state Prefire_Valve_State: PBV8: CLOSED
  state Prefire_Valve_State: PBV9: OPEN
  state Prefire_Valve_State: PBV10: CLOSED
  state Prefire_Valve_State: PBV11: CLOSED
  state Prefire_Valve_State: SOL1: CLOSED
  state Prefire_Valve_State: SOL2: CLOSED
 
  state Prefire_Valve_Control
  state Prefire_Valve_Control: Manual: NONE
}
 
state FILL {
  state Fill_Valve_Control
  state Fill_Valve_Control: Manual: ALL
}
 
state IGNITION {
  state Ignition_Valve_State: PBV1: CLOSED
  state Ignition_Valve_State: PBV2: CLOSED
  state Ignition_Valve_State: PBV3: CLOSED
  state Ignition_Valve_State: PBV4: CLOSED
  state Ignition_Valve_State: PBV5: CLOSED
  state Ignition_Valve_State: PBV6: CLOSED
  state Ignition_Valve_State: PBV7: CLOSED
  state Ignition_Valve_State: PBV8: OPEN
  state Ignition_Valve_State: PBV9: CLOSED
  state Ignition_Valve_State: PBV10: CLOSED
  state Ignition_Valve_State: PBV11: CLOSED
  state Ignition_Valve_State: SOL1: CLOSED
  state Ignition_Valve_State: SOL2: CLOSED

  state Ignition_Valve_Control
  state Ignition_Valve_Control: Manual: NONE
}
 
state FIRE {
  state Fire_Valve_State: PBV6: OPEN
  state Fire_Valve_State: PBV7: OPEN
  state Fire_Valve_State: PBV10: OPEN
  state Fire_Valve_State: PBV11: OPEN

  state Fire_Valve_Control
  state Fire_Valve_Control: Manual: NONE
}

state POST_FIRE {
  state Post_Fire_Valve_State: PBV6: CLOSED
  state Post_Fire_Valve_State: PBV7: CLOSED
  state Post_Fire_Valve_State: PBV10: CLOSED
  state Post_Fire_Valve_State: PBV11: CLOSED

  state Post_Fire_Valve_Control
  state Post_Fire_Valve_Control: Manual: ALL
} 
 
state ABORT {
  state Abort_Valve_State: PBV1: CLOSED
  state Abort_Valve_State: PBV2: OPEN
  state Abort_Valve_State: PBV3: CLOSED
  state Abort_Valve_State: PBV4: OPEN
  state Abort_Valve_State: PBV5: OPEN
  state Abort_Valve_State: PBV6: CLOSED
  state Abort_Valve_State: PBV7: CLOSED
  state Abort_Valve_State: PBV8: CLOSED
  state Abort_Valve_State: PBV9: OPEN
  state Abort_Valve_State: PBV10: CLOSED
  state Abort_Valve_State: PBV11: CLOSED
  state Abort_Valve_State: SOL1: CLOSED
  state Abort_Valve_State: SOL2: CLOSED
 
  state Abort_Valve_Control
  state Abort_Valve_Control: Manual: NONE
}
 
state TEST {
  state Test_Valve_Control
  state Test_Valve_Control: Manual: ALL
}
@enduml